--- a/app/assets/stylesheets/appointments.scss
+++ b/app/assets/stylesheets/appointments.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the Appointments controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.submit-button {
+  padding: 20px;
+  background-color: green;
+  color: #ffffff;
+  border-radius: 5px;
+} 
+
+.appointment {
+  padding-top: 10px;
+  border-bottom: solid 1px #ccc;
+}
